Add Form and Cta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>BALE-TECH</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Account</a></li>
+                <li><a href="http://127.0.0.1:5500/account.html">Account</a></li>
                 <li><a href="#">Add to Cart</a></li>
             </ul>
         </nav>
@@ -72,7 +72,7 @@
          </div>
 
         <div class="product">
-         <img class="photo-product" src="./img/mac.jpg" alt="macbook">
+         <img class="photo-product" src="./img/mac2.jpg" alt="macbook">
            <h3>MacBook</h3>
            <ul class="list-details">
                <li>Display Size 13.03-inch</li>
@@ -110,11 +110,27 @@
     </section>
    </div>  
    </section>
-
+    <section>
+      <div class="cta">
+      <div class="cta-content">
+        <h3 class="cta-header">Need a high level laptop</h3>
+        <p>The Apple M1 chip gives the 13-inch MacBook Pro speed and power beyond belief.
+          With up to 2.8x CPU performance. Up to 5x the graphics speed.
+           An advanced Neural Engine for up to 11x faster machine learning. 
+           And up to 20 hours of battery life so you can go all day. 
+          It's our most popular pro notebook, taken to a whole new level.</p>
+          <a href="#" class="cta-btn">Buy now</a>
+      </div>
+      <div class="cta-image">
+        <img src="/img/mac2.jpg" alt="macbook">
+      </div>
+      </div>
+    </section>
    <section>
    <footer class="site-footer">
     <div class="container">
       <div class="first-footer">
+       
         <div class="item-footer">
           <h6>Brands</h6>
           <ul class="footer-links">
@@ -132,8 +148,18 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Account</a></li>
+            <li><a href="http://127.0.0.1:5500/account.html">Account</a></li>
             <li><a href="#">Add to Cart</a></li>
+          </ul>
+        </div>
+        <div class="item-footer">
+          <h6>Locations</h6>
+          <ul class="footer-links">
+          <li><a href="#">Pristina</a></li>
+          <li><a href="#">Tirana</a></li>
+          <li><a href="#">Skopje</a></li>
+          <li><a href="#">Ulcinj</a></li>
+          <li><a href="#">Sarajevo</a></li>
           </ul>
         </div>
       </div>
@@ -142,7 +168,7 @@
     <div class="container">
       <div class="second-footer">
         <div>
-          <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by BALE-TECH</p>
+          <p class="copyright-text">Copyright &copy; 2022 BALE-TECH</p>
         </div>
 
         <div>
