Add a form and cta

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:5500/account.html">Account</a></li>
+                <li><a href="account.html">Account</a></li>
                 <li><a href="#">Add to Cart</a></li>
             </ul>
         </nav>
