--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a href="#" class="cta-btn">Buy now</a>
       </div>
       <div class="cta-image">
-        <img src="/img/mac2.jpg" alt="macbook">
+        <img src="./img/mac2.jpg" alt="macbook">
       </div>
       </div>
     </section>
@@ -148,7 +148,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="http://127.0.0.1:5500/account.html">Account</a></li>
+            <li><a href="account.html">Account</a></li>
             <li><a href="#">Add to Cart</a></li>
           </ul>
         </div>
