--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a href="#" class="cta-btn">Buy now</a>
       </div>
       <div class="cta-image">
-        <img src="./img/mac2.jpg" alt="macbook">
+        <img src="img/mac2.jpg" alt="macbook">
       </div>
       </div>
     </section>
